# emojify

./: .gitignore  LICENSE  README.md  bert.ipynb  data.ipynb  example_net.ipynb  lstm_bert_embeddings.ipynb  mypy.ini  oystein.ipynb  oystein_n_bayes.ipynb  pandas-intro.md  pyproject.toml  requirements.txt  sondre.ipynb  sondre2.ipynb  transformer_embeddings.ipynb
best_checkpoints/: best_model.ckpt
data/: bert_embeddings_labels.npy  data.rar
emojify/: bert_embeddings.py  data.ipynb  data_fu.ipynb  data_so.ipynb  example_net.py  first_data.py  knn.ipynb  lstm_bert_embeddings.py  main.py  nn_manager.py  some.json  trainer.py  transformer_data.py  transformer_embeddings.py  twitter_dataset.py  utils.py
emojify/dataloaders/: bert_embedded_data.py  transformer_data.py
emojify/models/: example_net.py  lstm_net.py
emojify/server/: serve.py
emojify/utils/: get_emoji.py  nn_manager.py  nn_utils.py  text_utils.py
